<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license">Пользовательское соглашение</string>
    <string name="support_mail">changeme@email.abc</string>
    <string name="support_mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_content">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="ya_android_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="ya_license">https://yandex.ru/legal/practicum_offer/</string>
    <string name="searchbar_hint">Поиск</string>
    <string name="searchbar_clear">Очистить поисковый запрос</string>
    <string name="track_details">Информация о треке</string>
    <string name="album_cover_image">Изображение обложки альбома</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="show_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="reload">Обновить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="play">Воспроизвести</string>
    <string name="smth_wrong">Что-то пошло не так...</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_cover_image">Изображение обложки плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_body">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_finish">Завершить</string>
    <string name="playlist_dialog_cancel">Отмена</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="todo">клик =)</string>
    <string name="error_toast">Ошибка: %1$s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_was_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="tracks_one"> трек</string>
    <string name="tracks_2_3_4"> трека</string>
    <string name="tracks_other"> треков</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_more">Меню</string>
    <string name="playlist_details_dialog_body">Хотите удалить трек?</string>
    <string name="playlist_details_dialog_yes">ДА</string>
    <string name="playlist_details_dialog_no">НЕТ</string>
    <string name="playlist_details_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_details_delete_playlist">Хотите удалить плейлист "%1$s"?</string>
</resources>