<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <Button
            android:id="@+id/main_search_button"
            style="@style/MainTextButton"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/main_media_button"
            style="@style/MainTextButton"
            android:text="@string/media"
            app:icon="@drawable/ic_media" />

        <Button
            android:id="@+id/main_settings_button"
            style="@style/MainTextButton"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>

</LinearLayout>