<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/icon_navigation"
        app:title="@string/search" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <EditText
            android:id="@+id/searchbar"
            style="@style/SearchBarET"
            android:hint="@string/searchbar_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <ImageView
            android:id="@+id/clear_button"
            style="@style/SearchBarClearBTN"
            android:contentDescription="@string/searchbar_clear"
            android:src="@drawable/ic_clear" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/search_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_98"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/nothing_found"
            android:src="@drawable/ic_nothing_found" />

        <TextView
            style="@style/SearchAdditionalInfo"
            android:paddingTop="@dimen/padding_136"
            android:text="@string/nothing_found" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/search_network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_98"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/network_error"
            android:src="@drawable/ic_network_error" />

        <TextView
            style="@style/SearchAdditionalInfo"
            android:paddingTop="@dimen/padding_136"
            android:text="@string/network_error" />

        <Button
            style="@style/SearchReloadButton"
            android:layout_marginTop="240dp"
            android:text="@string/reload" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_16" />

</LinearLayout>