<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_16"
    android:background="@color/player_background"
    tools:context="com.example.playlistmaker.player.ui.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/media_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/player_text_color" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_16" />

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="82dp"
            android:contentDescription="@string/album_cover_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintStart_toStartOf="@id/guideline_left_24"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_placeholder" />

        <TextView
            android:id="@+id/track_name"
            style="@style/PlayerTrackName"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="@dimen/padding_24"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_24"
            app:layout_constraintTop_toBottomOf="@id/album_cover"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/PlayerArtistName"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginTop="@dimen/padding_12"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_24"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/play"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintStart_toStartOf="@id/guideline_left_24"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:srcCompat="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/add_btn"
            android:layout_width="@dimen/fab"
            android:layout_height="@dimen/fab"
            android:contentDescription="@string/add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/play_btn"
            app:layout_constraintStart_toStartOf="@id/guideline_left_24"
            app:layout_constraintTop_toTopOf="@id/play_btn"
            app:srcCompat="@drawable/fab_add" />

        <ImageButton
            android:id="@+id/favorites_btn"
            android:layout_width="@dimen/fab"
            android:layout_height="@dimen/fab"
            android:contentDescription="@string/add_to_favorites"
            app:layout_constraintBottom_toBottomOf="@id/play_btn"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintTop_toTopOf="@id/play_btn"
            app:srcCompat="@drawable/fab_favorites" />

        <TextView
            android:id="@+id/listen_progress"
            style="@style/PlayerArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_24"
            app:layout_constraintStart_toStartOf="@id/guideline_left_24"
            app:layout_constraintTop_toBottomOf="@id/play_btn"
            android:text="0:00" />

        <TextView
            android:id="@+id/duration_tv"
            style="@style/PlayerDetailsKey"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/guideline_left_16"
            app:layout_constraintTop_toBottomOf="@id/listen_progress" />

        <TextView
            android:id="@+id/duration"
            style="@style/PlayerDetailsValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/duration_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_16"
            tools:text="5:35" />

        <TextView
            android:id="@+id/album_tv"
            style="@style/PlayerDetailsKey"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="@id/guideline_left_16"
            app:layout_constraintTop_toBottomOf="@id/duration_tv" />

        <TextView
            android:id="@+id/album"
            style="@style/PlayerDetailsValue"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/album_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_16"
            app:layout_constraintStart_toEndOf="@id/details_barrier"
            tools:text="Yesterday (Remastered 2009)" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_details_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="album_tv, album" />

        <TextView
            android:id="@+id/year_tv"
            style="@style/PlayerDetailsKey"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/guideline_left_16"
            app:layout_constraintTop_toBottomOf="@id/album_tv" />

        <TextView
            android:id="@+id/year"
            style="@style/PlayerDetailsValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/year_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_16"
            tools:text="1965" />

        <TextView
            android:id="@+id/genre_tv"
            style="@style/PlayerDetailsKey"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/guideline_left_16"
            app:layout_constraintTop_toBottomOf="@id/year_tv" />

        <TextView
            android:id="@+id/genre"
            style="@style/PlayerDetailsValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/genre_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_16"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country_tv"
            style="@style/PlayerDetailsKey"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="@id/guideline_left_16"
            app:layout_constraintTop_toBottomOf="@id/genre_tv" />

        <TextView
            android:id="@+id/country"
            style="@style/PlayerDetailsValue"
            app:layout_constraintBaseline_toBaselineOf="@+id/country_tv"
            app:layout_constraintEnd_toEndOf="@id/guideline_right_16"
            tools:text="Великобритания" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/details_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="duration_tv, album_tv, year_tv, genre_tv, country_tv"
                app:barrierDirection="end" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>